cache system types and user types